tests/baselines/reference/referenceSatisfiesExpression.errors.txt
referenceSatisfiesExpression.ts(9,2): error TS2454: Variable 'b' is used before being assigned.
referenceSatisfiesExpression.ts(12,3): error TS2454: Variable 'c' is used before being assigned.


==== referenceSatisfiesExpression.ts (2 errors) ====
    let a = 10;
    --(a satisfies number);
    ++(a satisfies number);
    
    (a satisfies number)++;
    (a satisfies number)--;
    
    let b: number;
    (b satisfies number) = 10;
     ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
    let c: number;
    [(c satisfies number)] = [10];
      ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    let d: number, e = 1;
    ({ d: (e satisfies number) } = { d: 10 });
    
    let g = 1
    for ((g satisfies number) of [10]) {
      console.log(g)
    }
    
    let x: string = "hello"
    for ((x satisfies string) in { a: 10 }) {
      console.log(x)
    }
    